# rubric-reward-lens

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: publish.yml
.superpowers/sdd/: progress.md
docs/: interpreting-the-report.md  metrics.md  usage.md  verifying-on-real-data.md
docs/superpowers/plans/: 2026-06-29-rubric-reward-lens.md
docs/superpowers/specs/: 2026-06-29-rubric-reward-lens-design.md
examples/: grader.fake.yaml  grader.ollama.yaml  grader.openrouter.yaml  helpfulness_rubric.yaml  load_helpsteer2.py  quickstart.py  realistic_responses.json  rubric.yaml  sample_report.html  sample_report.md  verify_alignment.py
src/rubric_reward_lens/: __init__.py  audit.py  cli.py  grader.py  models.py  ollama.py  openrouter.py  probes.py  report.py  stats.py
src/rubric_reward_lens/data/: __init__.py
src/rubric_reward_lens/data/healthbench_demo/: responses.json  rubric.json
src/rubric_reward_lens/diagnostics/: __init__.py  alignment.py  hacking.py  monotonicity.py  order.py  stability.py  structure.py
tests/: conftest.py  test_alignment.py  test_audit.py  test_cli.py  test_data.py  test_grader.py  test_hacking.py  test_models.py  test_monotonicity.py  test_ollama.py  test_openrouter.py  test_order.py  test_probes.py  test_report.py  test_stability.py  test_stats.py  test_structure.py  test_validation.py
